// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateContractForm matches the empty-state form structure 1`] = `
<div
  aria-labelledby="create-contract-heading"
  aria-modal="true"
  class="fixed inset-0 z-50 flex items-center justify-center overflow-hidden bg-black/50 backdrop-blur-sm"
  role="dialog"
>
  <div
    class="w-full max-w-lg max-h-[90vh] overflow-y-auto rounded-3xl border border-slate-200 bg-white p-6 shadow-xl"
  >
    <h2
      class="text-xl font-semibold text-slate-900 mb-6"
      id="create-contract-heading"
    >
      Create a new contract
    </h2>
    <form
      novalidate=""
    >
      <div
        class="mb-4 w-full"
      >
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="contractName"
        >
          Contract name
          <span
            aria-hidden="true"
            class="text-red-500 ml-1"
          >
            *
          </span>
        </label>
        <input
          aria-invalid="false"
          aria-required="true"
          autocomplete="off"
          class="w-full rounded-2xl border border-slate-300 bg-white px-4 py-2.5 text-sm text-slate-900 placeholder:text-slate-400 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition"
          id="contractName"
          placeholder="e.g. Website Redesign"
          type="text"
          value=""
        />
      </div>
      <div
        class="mb-4 w-full"
      >
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="freelancerAddress"
        >
          Freelancer Stellar address
          <span
            aria-hidden="true"
            class="text-red-500 ml-1"
          >
            *
          </span>
        </label>
        <input
          aria-describedby="freelancerAddress-helper"
          aria-invalid="false"
          aria-required="true"
          autocapitalize="off"
          autocomplete="off"
          class="w-full rounded-2xl border px-4 py-2.5 font-mono text-sm text-slate-900 placeholder:text-slate-400 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition"
          id="freelancerAddress"
          maxlength="56"
          placeholder="GXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
          spellcheck="false"
          type="text"
          value=""
        />
        <p
          class="mt-1 text-sm text-gray-500"
          id="freelancerAddress-helper"
        >
          Must be a valid Stellar public key starting with G
        </p>
      </div>
      <div
        class="mb-4 w-full"
      >
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="totalValue"
        >
          Total value
          <span
            aria-hidden="true"
            class="text-red-500 ml-1"
          >
            *
          </span>
        </label>
        <input
          aria-invalid="false"
          aria-required="true"
          class="w-full rounded-2xl border border-slate-300 bg-white px-4 py-2.5 text-sm text-slate-900 placeholder:text-slate-400 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition"
          id="totalValue"
          min="0.01"
          placeholder="0.00"
          step="any"
          type="number"
          value=""
        />
      </div>
      <div
        class="mb-4 w-full"
      >
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="currency"
        >
          Currency
          <span
            aria-hidden="true"
            class="text-red-500 ml-1"
          >
            *
          </span>
        </label>
        <select
          aria-invalid="false"
          aria-required="true"
          class="w-full rounded-2xl border border-slate-300 bg-white px-4 py-2.5 text-sm text-slate-900 placeholder:text-slate-400 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition"
          id="currency"
        >
          <option
            value="USD"
          >
            USD
          </option>
          <option
            value="XLM"
          >
            XLM
          </option>
          <option
            value="EUR"
          >
            EUR
          </option>
          <option
            value="GBP"
          >
            GBP
          </option>
        </select>
      </div>
      <div
        class="mt-6 flex flex-col gap-3 sm:flex-row"
      >
        <button
          class="rounded-2xl bg-blue-600 px-6 py-2.5 text-sm font-semibold text-white transition hover:bg-blue-700 focus-visible:outline focus-visible:outline-4 focus-visible:outline-offset-2 focus-visible:outline-blue-500"
          type="submit"
        >
          Create Contract
        </button>
        <button
          class="rounded-2xl border border-slate-300 bg-white px-6 py-2.5 text-sm font-semibold text-slate-900 transition hover:border-slate-400 focus-visible:outline focus-visible:outline-4 focus-visible:outline-offset-2 focus-visible:outline-blue-500"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`CreateContractForm matches the error-state form structure after validation failures 1`] = `
<div
  aria-labelledby="create-contract-heading"
  aria-modal="true"
  class="fixed inset-0 z-50 flex items-center justify-center overflow-hidden bg-black/50 backdrop-blur-sm"
  role="dialog"
>
  <div
    class="w-full max-w-lg max-h-[90vh] overflow-y-auto rounded-3xl border border-slate-200 bg-white p-6 shadow-xl"
  >
    <h2
      class="text-xl font-semibold text-slate-900 mb-6"
      id="create-contract-heading"
    >
      Create a new contract
    </h2>
    <div
      aria-labelledby="error-summary-title"
      class="p-4 mb-6 border-l-4 border-red-500 bg-red-50 focus:outline-none focus:ring-2 focus:ring-red-500"
      role="alert"
      tabindex="-1"
    >
      <h2
        class="text-lg font-bold text-red-800"
        id="error-summary-title"
      >
        There is a problem
      </h2>
      <ul
        class="mt-2 space-y-1 list-inside text-sm text-red-700"
      >
        <li>
          <a
            class="font-medium underline hover:text-red-900 focus:text-red-900 transition-colors"
            href="#contractName"
          >
            Contract name is required
          </a>
        </li>
        <li>
          <a
            class="font-medium underline hover:text-red-900 focus:text-red-900 transition-colors"
            href="#freelancerAddress"
          >
            Freelancer address is required
          </a>
        </li>
        <li>
          <a
            class="font-medium underline hover:text-red-900 focus:text-red-900 transition-colors"
            href="#totalValue"
          >
            Total value must be a positive number
          </a>
        </li>
      </ul>
    </div>
    <form
      novalidate=""
    >
      <div
        class="mb-4 w-full"
      >
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="contractName"
        >
          Contract name
          <span
            aria-hidden="true"
            class="text-red-500 ml-1"
          >
            *
          </span>
        </label>
        <input
          aria-describedby="contractName-error"
          aria-invalid="true"
          aria-required="true"
          autocomplete="off"
          class="w-full rounded-2xl border border-slate-300 bg-white px-4 py-2.5 text-sm text-slate-900 placeholder:text-slate-400 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition border-red-500 focus:ring-red-500 focus:border-red-500"
          id="contractName"
          placeholder="e.g. Website Redesign"
          type="text"
          value=""
        />
        <p
          class="mt-1 text-sm text-red-600 font-medium"
          id="contractName-error"
          role="alert"
        >
          Contract name is required
        </p>
      </div>
      <div
        class="mb-4 w-full"
      >
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="freelancerAddress"
        >
          Freelancer Stellar address
          <span
            aria-hidden="true"
            class="text-red-500 ml-1"
          >
            *
          </span>
        </label>
        <input
          aria-describedby="freelancerAddress-error freelancerAddress-helper"
          aria-invalid="true"
          aria-required="true"
          autocapitalize="off"
          autocomplete="off"
          class="w-full rounded-2xl border px-4 py-2.5 font-mono text-sm text-slate-900 placeholder:text-slate-400 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition border-red-500 focus:ring-red-500 focus:border-red-500"
          id="freelancerAddress"
          maxlength="56"
          placeholder="GXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
          spellcheck="false"
          type="text"
          value=""
        />
        <p
          class="mt-1 text-sm text-gray-500"
          id="freelancerAddress-helper"
        >
          Must be a valid Stellar public key starting with G
        </p>
        <p
          class="mt-1 text-sm text-red-600 font-medium"
          id="freelancerAddress-error"
          role="alert"
        >
          Freelancer address is required
        </p>
      </div>
      <div
        class="mb-4 w-full"
      >
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="totalValue"
        >
          Total value
          <span
            aria-hidden="true"
            class="text-red-500 ml-1"
          >
            *
          </span>
        </label>
        <input
          aria-describedby="totalValue-error"
          aria-invalid="true"
          aria-required="true"
          class="w-full rounded-2xl border border-slate-300 bg-white px-4 py-2.5 text-sm text-slate-900 placeholder:text-slate-400 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition border-red-500 focus:ring-red-500 focus:border-red-500"
          id="totalValue"
          min="0.01"
          placeholder="0.00"
          step="any"
          type="number"
          value=""
        />
        <p
          class="mt-1 text-sm text-red-600 font-medium"
          id="totalValue-error"
          role="alert"
        >
          Total value must be a positive number
        </p>
      </div>
      <div
        class="mb-4 w-full"
      >
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="currency"
        >
          Currency
          <span
            aria-hidden="true"
            class="text-red-500 ml-1"
          >
            *
          </span>
        </label>
        <select
          aria-invalid="false"
          aria-required="true"
          class="w-full rounded-2xl border border-slate-300 bg-white px-4 py-2.5 text-sm text-slate-900 placeholder:text-slate-400 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition"
          id="currency"
        >
          <option
            value="USD"
          >
            USD
          </option>
          <option
            value="XLM"
          >
            XLM
          </option>
          <option
            value="EUR"
          >
            EUR
          </option>
          <option
            value="GBP"
          >
            GBP
          </option>
        </select>
      </div>
      <div
        class="mt-6 flex flex-col gap-3 sm:flex-row"
      >
        <button
          class="rounded-2xl bg-blue-600 px-6 py-2.5 text-sm font-semibold text-white transition hover:bg-blue-700 focus-visible:outline focus-visible:outline-4 focus-visible:outline-offset-2 focus-visible:outline-blue-500"
          type="submit"
        >
          Create Contract
        </button>
        <button
          class="rounded-2xl border border-slate-300 bg-white px-6 py-2.5 text-sm font-semibold text-slate-900 transition hover:border-slate-400 focus-visible:outline focus-visible:outline-4 focus-visible:outline-offset-2 focus-visible:outline-blue-500"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`CreateContractForm matches the populated-state form structure 1`] = `
<div
  aria-labelledby="create-contract-heading"
  aria-modal="true"
  class="fixed inset-0 z-50 flex items-center justify-center overflow-hidden bg-black/50 backdrop-blur-sm"
  role="dialog"
>
  <div
    class="w-full max-w-lg max-h-[90vh] overflow-y-auto rounded-3xl border border-slate-200 bg-white p-6 shadow-xl"
  >
    <h2
      class="text-xl font-semibold text-slate-900 mb-6"
      id="create-contract-heading"
    >
      Create a new contract
    </h2>
    <form
      novalidate=""
    >
      <div
        class="mb-4 w-full"
      >
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="contractName"
        >
          Contract name
          <span
            aria-hidden="true"
            class="text-red-500 ml-1"
          >
            *
          </span>
        </label>
        <input
          aria-invalid="false"
          aria-required="true"
          autocomplete="off"
          class="w-full rounded-2xl border border-slate-300 bg-white px-4 py-2.5 text-sm text-slate-900 placeholder:text-slate-400 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition"
          id="contractName"
          placeholder="e.g. Website Redesign"
          type="text"
          value="Design Sprint"
        />
      </div>
      <div
        class="mb-4 w-full"
      >
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="freelancerAddress"
        >
          Freelancer Stellar address
          <span
            aria-hidden="true"
            class="text-red-500 ml-1"
          >
            *
          </span>
        </label>
        <input
          aria-describedby="freelancerAddress-helper"
          aria-invalid="false"
          aria-required="true"
          autocapitalize="off"
          autocomplete="off"
          class="w-full rounded-2xl border px-4 py-2.5 font-mono text-sm text-slate-900 placeholder:text-slate-400 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition"
          id="freelancerAddress"
          maxlength="56"
          placeholder="GXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
          spellcheck="false"
          type="text"
          value="GBRPYHIL2CI3FNQ4BXLFMNDLFJUNPU2HY3ZMFSHONUCEOASW7QC7OX2H"
        />
        <p
          class="mt-1 text-sm text-gray-500"
          id="freelancerAddress-helper"
        >
          Must be a valid Stellar public key starting with G
        </p>
      </div>
      <div
        class="mb-4 w-full"
      >
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="totalValue"
        >
          Total value
          <span
            aria-hidden="true"
            class="text-red-500 ml-1"
          >
            *
          </span>
        </label>
        <input
          aria-invalid="false"
          aria-required="true"
          class="w-full rounded-2xl border border-slate-300 bg-white px-4 py-2.5 text-sm text-slate-900 placeholder:text-slate-400 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition"
          id="totalValue"
          min="0.01"
          placeholder="0.00"
          step="any"
          type="number"
          value="5000"
        />
      </div>
      <div
        class="mb-4 w-full"
      >
        <label
          class="block text-sm font-medium text-gray-700 mb-1"
          for="currency"
        >
          Currency
          <span
            aria-hidden="true"
            class="text-red-500 ml-1"
          >
            *
          </span>
        </label>
        <select
          aria-invalid="false"
          aria-required="true"
          class="w-full rounded-2xl border border-slate-300 bg-white px-4 py-2.5 text-sm text-slate-900 placeholder:text-slate-400 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition"
          id="currency"
        >
          <option
            value="USD"
          >
            USD
          </option>
          <option
            value="XLM"
          >
            XLM
          </option>
          <option
            value="EUR"
          >
            EUR
          </option>
          <option
            value="GBP"
          >
            GBP
          </option>
        </select>
      </div>
      <div
        class="mt-6 flex flex-col gap-3 sm:flex-row"
      >
        <button
          class="rounded-2xl bg-blue-600 px-6 py-2.5 text-sm font-semibold text-white transition hover:bg-blue-700 focus-visible:outline focus-visible:outline-4 focus-visible:outline-offset-2 focus-visible:outline-blue-500"
          type="submit"
        >
          Create Contract
        </button>
        <button
          class="rounded-2xl border border-slate-300 bg-white px-6 py-2.5 text-sm font-semibold text-slate-900 transition hover:border-slate-400 focus-visible:outline focus-visible:outline-4 focus-visible:outline-offset-2 focus-visible:outline-blue-500"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;
